--- a/api/build.gradle
+++ b/api/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdkVersion 22
         targetSdkVersion 26
         versionCode 1
-        versionName "0.0.2"
+        versionName "0.0.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -32,6 +32,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile 'org.apache.commons:commons-lang3:3.6'
 }
 
 task sourceJar(type: Jar) {
@@ -56,7 +57,7 @@ publishing {
         mavenKotlin(MavenPublication) {
             groupId 'ru.evotor'
             artifactId "egais-api"
-            version "0.0.2-dev"
+            version "0.0.4-dev"
             artifact(sourceJar)
             artifact(javadocJar)
             artifact "${project.buildDir}/outputs/aar/${project.archivesBaseName}-release.aar"
