--- a/api/build.gradle
+++ b/api/build.gradle
@@ -32,6 +32,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile 'com.github.evotor:query-api:6806973afa'
 }
 
 task sourceJar(type: Jar) {
