add stock/shop apis

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -33,7 +33,7 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile 'org.apache.commons:commons-lang3:3.6'
-    compile 'com.github.evotor:query-api:6806973afa'
+    compile 'com.github.ArtemiyDmtrvch:query-api:2acf578c6b'
 }
 
 task sourceJar(type: Jar) {
