--- a/api/build.gradle
+++ b/api/build.gradle
@@ -7,12 +7,11 @@ apply plugin: 'org.jetbrains.dokka-android'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.2"
     defaultConfig {
         minSdkVersion 22
         targetSdkVersion 26
         versionCode 1
-        versionName "0.0.5"
+        versionName "0.0.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -31,9 +30,9 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile 'org.apache.commons:commons-lang3:3.6'
-    compile 'com.github.evotor:query-api:1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'org.apache.commons:commons-lang3:3.6'
+    implementation 'com.github.evotor:query-api:1.0.0'
 }
 
 task sourceJar(type: Jar) {
