--- a/api/build.gradle
+++ b/api/build.gradle
@@ -32,7 +32,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'org.apache.commons:commons-lang3:3.6'
-    api 'com.github.evotor:query-api:1.0.0'
+    compile 'com.github.evotor:query-api:1.0.0'
 }
 
 task sourceJar(type: Jar) {
@@ -65,7 +65,7 @@ publishing {
             //generate pom nodes for dependencies
             pom.withXml {
                 def dependenciesNode = asNode().appendNode('dependencies')
-                configurations.api.allDependencies.each { dependency ->
+                configurations.compile.allDependencies.each { dependency ->
                     if (dependency.group) {
                         def dependencyNode = dependenciesNode.appendNode('dependency')
                         dependencyNode.appendNode('groupId', dependency.group)
