STDEV-5914 fix docca

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -40,7 +40,7 @@ task sourceJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
 }
 
-dokka {
+dokka.configure {
     outputFormat = 'javadoc'
     outputDirectory = "$buildDir/javadoc"
 }
