--- a/api/build.gradle
+++ b/api/build.gradle
@@ -30,8 +30,8 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'org.apache.commons:commons-lang3:3.6'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10"
+    implementation 'org.apache.commons:commons-lang3:3.10'
     implementation 'com.github.evotor:query-api:1.0.0'
 }
 
