--- a/api/build.gradle
+++ b/api/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 22
         targetSdkVersion 29
         versionCode 800
-        versionName "0.0.8"
+        versionName "0.0.8-STDEV-18260"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
